--- a/midterm-project/details.html
+++ b/midterm-project/details.html
@@ -12,9 +12,9 @@
     <div class="container">
         <h1>Details</h1>
         <div id="postDetails"></div>
-    </div>
+    </div>  
+    <button id="back" onclick="goBack()"> &LeftArrow; Back to Posts</button>
     <script src="details.js"></script>
-    <button id="back" href="post.html"> &LeftArrow; Back to Posts</button>
 
 </body>
 </html>
