--- a/midterm-project/post.html
+++ b/midterm-project/post.html
@@ -10,15 +10,18 @@
 <body>
 
   <div class="container">
-    <div class="page-title">POSTS</div>
+    
+    <div class="page-title">
+      POSTS
     <form>
-      <div class="field">
+      <div class="backDrop">
         <input type="text" id="SearchBar" placeholder="Search" />
         <label for="search" aria-placeholder="Search"></label>
-      </div>
+      </div> 
     </form>
-    <div class="products-container"></div>
   </div>
+    <div class="products-container"></div>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top &UpArrow;</button>
   <script src="post.js"></script>
 
 </body>
